--- a/projects/components/style/tokens/baselight.tokens.css
+++ b/projects/components/style/tokens/baselight.tokens.css
@@ -13,16 +13,16 @@ html[data-theme='baselight'] {
   --color-text-70: rgba(0, 0, 0, 0.72);
   --color-text-80: rgba(0, 0, 0, 0.8);
   --color-text-90: rgba(0, 0, 0, 0.87);
-  --color-primary-5: #e3eaf9;
-  --color-primary-10: #c6d7ff;
-  --color-primary-20: #9fbbfe;
-  --color-primary-30: #77a0fe;
-  --color-primary-40: #5086fd;
-  --color-primary-50: #286cfd;
-  --color-primary-60: #245fdd;
-  --color-primary-70: #1f51bd;
-  --color-primary-80: #1a449d;
-  --color-primary-90: #15367d;
+  --color-primary-5: #d9e8ff;
+  --color-primary-10: #adcfff;
+  --color-primary-20: #82b7ff;
+  --color-primary-30: #579fff;
+  --color-primary-40: #3789f4;
+  --color-primary-50: #2173df;
+  --color-primary-60: #0868d2;
+  --color-primary-70: #005db4;
+  --color-primary-80: #00528e;
+  --color-primary-90: #004469;
   --color-green-5: #e6f4f0;
   --color-green-10: #bbe0d3;
   --color-green-20: #90cbb5;
